add jenkins template